# nasko-rs

./: .gitignore  Cargo.toml
compiler/: package.json
compiler/src/: utils.ts
src/: instructions.rs  lib.rs  main.rs  vm.rs
tests/: vm.rs
