[package]
name = "nasko"
version = "0.1.0"
authors = ["cstanze <developer.julius0301@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num_cpus = "*"
uuid = { version = "*", features = ["v4"] }
chrono = "*"
ansi_term = "*"
